// protos/user.proto
syntax = "proto3";

package user;

service UserService {
  rpc GetAllUsers (Empty) returns (UserList);
  rpc GetUserById (UserIdRequest) returns (User);
  rpc RegisterUser (RegisterUserRequest) returns (UserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);

  rpc GetAllRoles (Empty) returns (RoleList);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message Empty {}

message UserIdRequest {
  string id = 1;
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
}

message UserList {
  repeated User users = 1;
}

message Role {
  string id = 1;
  string role = 2;
}

message RoleList {
  repeated Role roles = 1;
}
