syntax = "proto3";

package user;

service UserService {
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);

  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);

  rpc CountUsers(CountUsersRequest) returns (CountUsersResponse);
  rpc CountUsersThisMonth(CountUsersThisMonthRequest) returns (CountUsersResponse);
}
message CountUsersThisMonthRequest {}

message CountUsersRequest {}

message CountUsersResponse {
  int32 total = 1;
}

message CreateProfileRequest {
  string user_id = 1;
  string name = 2;
  string phone = 3;
  string address = 4;
  MediaFileRequest avatar = 5;
}

message MediaFileRequest {
  string file_name = 1;
  string file_content = 2;
  string file_type = 3;
}

message CreateProfileResponse {
  Profile profile = 1;
  string message = 2;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated User users = 1;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string message = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  User user = 2;
  string message = 3;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  Profile profile = 5;
}

message Profile {
  string id = 1;
  string name = 2;
  string phone = 3;
  string address = 4;
  MediaFile avatar = 5;
}

message MediaFile {
  string id = 1;
  string file_url = 2;
  string file_type = 3;
}